# subagents-pydantic-ai

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
advanced/cancellation/: index.html
advanced/dynamic-agents/: index.html
advanced/execution-modes/: index.html
advanced/message-bus/: index.html
advanced/questions/: index.html
api/: index.html
api/capability/: index.html
api/protocols/: index.html
api/toolset/: index.html
api/types/: index.html
concepts/: index.html
concepts/capability/: index.html
concepts/subagents/: index.html
concepts/toolset/: index.html
concepts/types/: index.html
docs/: api-reference.md  changelog.md  dual-mode.md  examples.md  getting-help.md  index.md  installation.md  quickstart.md
docs/advanced/: cancellation.md  dynamic-agents.md  execution-modes.md  message-bus.md  questions.md
docs/api/: capability.md  index.md  protocols.md  toolset.md  types.md
docs/concepts/: capability.md  index.md  subagents.md  toolset.md  types.md
docs/examples/: basic-usage.md  index.md  nesting.md  questions.md  research-team.md  sync-async.md  toolsets.md
docs/includes/: abbreviations.md
docs/overrides/: main.html
docs/stylesheets/: extra.css
examples/: index.html
examples/basic-usage/: index.html
examples/nesting/: index.html
examples/questions/: index.html
examples/research-team/: index.html
examples/sync-async/: index.html
examples/toolsets/: index.html
getting-help/: index.html
includes/abbreviations/: index.html
installation/: index.html
search/: search_index.json
src/subagents_pydantic_ai/: __init__.py  capability.py  factory.py  message_bus.py  prompts.py  protocols.py  registry.py  spec.py  toolset.py  types.py
stylesheets/: extra.css
tests/: conftest.py  test_capability.py  test_factory.py  test_message_bus.py  test_prompts.py  test_protocols.py  test_registry.py  test_spec.py  test_toolset.py  test_types.py
