[project]
name = "subagents-pydantic-ai"
version = "0.0.5"
description = "Subagent toolset for pydantic-ai with dual-mode execution and dynamic agent creation"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Vstorm", email = "hr@vstorm.co" }]
keywords = [
    "pydantic",
    "pydantic-ai",
    "ai",
    "agents",
    "subagents",
    "multi-agent",
    "toolset",
    "task-delegation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = ["pydantic>=2.0", "pydantic-ai-slim>=1.38"]

[project.urls]
Homepage = "https://github.com/vstorm-co/subagents-pydantic-ai"
Documentation = "https://github.com/vstorm-co/subagents-pydantic-ai#readme"
Repository = "https://github.com/vstorm-co/subagents-pydantic-ai"
Issues = "https://github.com/vstorm-co/subagents-pydantic-ai/issues"
Changelog = "https://github.com/vstorm-co/subagents-pydantic-ai/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/subagents_pydantic_ai"]

[dependency-groups]
dev = [
    "build>=1.0.0",
    "coverage>=7.0.0",
    "pyright>=1.1.0",
    "mypy>=1.0.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "pre-commit>=4.5.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings>=0.26.0",
    "mkdocstrings-python>=1.12.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/subagents_pydantic_ai"]

[tool.coverage.report]
fail_under = 100
skip_covered = true
show_missing = true
precision = 2
exclude_also = ["# pragma: no branch"]
exclude_lines = [
    "pragma: no cover",
    "pragma: lax no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "@abstractmethod",
    "raise NotImplementedError",
    "if __name__ == '__main__':",
    "except ImportError:",
    "pass",
    "\\.\\.\\.",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "Q",      # flake8-quotes
    "RUF100", # unused noqa
    "C90",    # mccabe complexity
]
ignore = [
    "B021",   # f-string docstrings are used intentionally for dynamic LLM tool documentation
    "SIM105", # contextlib.suppress is less readable in async contexts
]

[tool.ruff.lint.mccabe]
max-complexity = 30  # Factory functions are intentionally complex

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
include = ["src/subagents_pydantic_ai"]
exclude = ["**/__pycache__", ".venv*", "site", "tests"]
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportUnusedFunction = false
reportPrivateUsage = false
reportCallIssue = false
reportAssignmentType = false
reportTypedDictNotRequiredAccess = false

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disable_error_code = ["arg-type", "list-item", "abstract"]

[tool.codespell]
skip = ".git,.venv*,uv.lock,site,htmlcov,.coverage"
